# message_transport

./: CMakeLists.txt  README.md
cmake/: FindFlatBuffers.cmake  dtrace.cmake  etw.cmake
include/message_transport/: exceptions.h  init_logging.h  logging.h  message_traits.h  message_transport_macros.h  message_transport_traits.h  message_transport_types.h  message_transport_util.h  tracing.h
include/message_transport/common/: message_transport.h  publisher.h  publisher.inl  publisher_impl.h  publisher_plugin.h  raw_publisher.h  raw_subscriber.h  simple_publisher_plugin.h  simple_subscriber_plugin.h  single_subscriber_publisher.h  subscriber.h  subscriber_impl.h  subscriber_plugin.h  timer.h
include/message_transport/platform/: clean_windows.h
include/message_transport/serialization/: message_schema.h  message_types.h  serialization.h
include/message_transport/sharedmem/: SharedMemoryBlock.h  SharedMemoryBlockDescriptor.h  release_pool.h  sharedmem_publisher.h  sharedmem_subscriber.h
src/: CMakeLists.txt  message_transport_util.cpp
src/common/: publisher.cpp  publisher_impl.cpp  subscriber.cpp  subscriber_impl.cpp
src/serialization/: message_types.cpp  serialization.cpp
src/sharedmem/: SharedMemoryBlock.cpp  SharedMemoryBlockDescriptor.cpp  sharedmem_manager.cpp  sharedmem_publisher.cpp
tests/: CMakeLists.txt  message_types.cpp  simple_consumer.cpp  simple_producer.cpp
tracing/dtrace/: message_transport_performance.d  probes_message_transport.d.base
tracing/etw/: etwrecord.bat  message_transport_etw_providers.man.base
